--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "dependencies": {
     "@aitmed/ecos-lvl2-sdk": "^1.4.67",
     "@aitmed/prynote-sdk": "^1.0.105",
-    "@aitmed/react-uidl": "^1.1.3",
-    "@material-ui/core": "^4.9.8",
+    "@aitmed/react-uidl": "^2.0.1",
+    "@aitmed/uidl-parser": "^1.0.17",
+    "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
+    "final-form": "^4.19.1",
     "immer": "^6.0.3",
+    "libphonenumber-js": "^1.7.50",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-final-form": "^6.4.0",
+    "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
     "styled-components": "^5.0.1",
     "use-immer": "^0.3.5",
