--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@aitmed/ecos-lvl2-sdk": "^1.4.67",
     "@aitmed/prynote-sdk": "^1.0.105",
+    "@aitmed/react-uidl": "^2.2.3",
     "@aitmed/uidl-parser": "^1.0.17",
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
@@ -12,8 +13,8 @@
     "final-form": "^4.19.1",
     "immer": "^6.0.3",
     "libphonenumber-js": "^1.7.50",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-final-form": "^6.4.0",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
