--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "aitmed-react-uidl-underworld",
   "version": "1.0.1",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@aitmed/ecos-lvl2-sdk": "^1.4.67",
     "@aitmed/prynote-sdk": "^1.0.105",
@@ -29,6 +30,7 @@
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
+    "@types/react-modal": "^3.10.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.1",
     "@types/yaml": "^1.2.0",
