--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "aitmed-react-uidl-underworld",
   "version": "1.0.1",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://github.com/pfftdammitchris/aitmed-react-uidl-underworld",
   "dependencies": {
     "@aitmed/ecos-lvl2-sdk": "^1.4.67",
     "@aitmed/prynote-sdk": "^1.0.105",
@@ -34,6 +34,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.1",
     "@types/yaml": "^1.2.0",
+    "gh-pages": "^2.2.0",
     "react-scripts": "^3.4.1",
     "typescript": "^3.8.3"
   },
@@ -44,7 +45,9 @@
     "eject": "react-scripts eject",
     "tsc": "tsc --watch",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
