--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "aitmed-react-uidl-underworld",
   "version": "1.0.1",
   "private": true,
+  "homepage": "aitmed-react-uidl-underworld/",
   "dependencies": {
     "@aitmed/ecos-lvl2-sdk": "^1.4.67",
     "@aitmed/prynote-sdk": "^1.0.105",
