--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
-    "final-form": "^4.19.1",
     "immer": "^6.0.3",
     "libphonenumber-js": "^1.7.50",
+    "lodash.get": "^4.4.2",
+    "lodash.omit": "^4.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-final-form": "^6.4.0",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
     "styled-components": "^5.0.1",
@@ -24,9 +24,6 @@
     "yaml": "^1.8.3"
   },
   "devDependencies": {
-    "@storybook/addons": "^5.3.18",
-    "@storybook/preset-create-react-app": "^2.1.1",
-    "@storybook/react": "^5.3.18",
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
@@ -44,8 +41,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "tsc": "tsc --watch",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
