--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
+    "draft-js": "^0.11.5",
+    "draft-js-code": "^0.3.0",
     "immer": "^6.0.3",
-    "libphonenumber-js": "^1.7.50",
     "lodash.get": "^4.4.2",
     "lodash.omit": "^4.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
     "styled-components": "^5.0.1",
     "use-immer": "^0.3.5",
     "yaml": "^1.8.3"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.10.39",
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
