--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
+    "detect-indent": "^6.0.0",
+    "detect-newline": "^3.1.0",
     "draft-js": "^0.11.5",
-    "draft-js-code": "^0.3.0",
+    "ends-with": "^1.0.1",
     "immer": "^6.0.3",
+    "immutable": "^4.0.0-rc.12",
     "lodash.get": "^4.4.2",
     "lodash.omit": "^4.5.0",
     "react": "16.13.1",
@@ -28,7 +31,6 @@
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
-    "@types/react-modal": "^3.10.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.1",
     "@types/yaml": "^1.2.0",
