--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "devDependencies": {
     "@types/draft-js": "^0.10.39",
+    "@types/lodash.get": "^4.4.6",
+    "@types/lodash.omit": "^4.5.6",
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
